6 contrast fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -20,3 +20,7 @@
     color: #000000 !important;
 }
 
+.elementor-1750 .elementor-element.elementor-element-2e6b62ad .elementor-post__card .elementor-post__badge {
+    background-color: #000000 !important;
+}
+
